[Kunal] ADD: Html and css for basic looks

--- a/index.html
+++ b/index.html
@@ -13,5 +13,38 @@
     <link rel="stylesheet" href="style.css" />
     <title>Unit Convertor</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="unit-container">
+        <select name="" id="unit">
+          <option value="">meter</option>
+          <option value="">meter</option>
+          <option value="">meter</option>
+        </select>
+        <div class="inner-boxes">
+          <div class="box">
+            <input type="text" name="" id="" />
+            <div class="dropdown">
+              <select name="" id="">
+                <option value="">meter</option>
+                <option value="">meter</option>
+                <option value="">meter</option>
+              </select>
+            </div>
+          </div>
+          <h3>=</h3>
+          <div class="box">
+            <input type="text" name="" id="" />
+            <div class="dropdown">
+              <select name="" id="">
+                <option value="">meter</option>
+                <option value="">meter</option>
+                <option value="">meter</option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
