--- a/index.html
+++ b/index.html
@@ -10,37 +10,40 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+      defer
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
+    <script src="./index.js" defer></script>
     <title>Unit Convertor</title>
   </head>
   <body>
     <div class="container">
       <div class="unit-container">
         <select name="" id="unit">
-          <option value="">meter</option>
-          <option value="">meter</option>
-          <option value="">meter</option>
+          <option value=""></option>
+          <option value=""></option>
+          <option value=""></option>
         </select>
         <div class="inner-boxes">
           <div class="box">
             <input type="text" name="" id="" />
             <div class="dropdown">
-              <select name="" id="">
-                <option value="">meter</option>
-                <option value="">meter</option>
-                <option value="">meter</option>
-              </select>
+              <select name="" id="unit-1"></select>
             </div>
           </div>
-          <h3>=</h3>
+          <h3>&nbsp;=&nbsp;</h3>
           <div class="box">
             <input type="text" name="" id="" />
             <div class="dropdown">
-              <select name="" id="">
-                <option value="">meter</option>
-                <option value="">meter</option>
-                <option value="">meter</option>
-              </select>
+              <select name="" id="unit-2"></select>
             </div>
           </div>
         </div>
