[Kunal] ADD: Fucntionality to Change units

--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
   <body>
     <div class="container">
       <div class="unit-container">
-        <select name="" id="unit">
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-        </select>
+        <select name="" id="units"></select>
         <div class="inner-boxes">
           <div class="box">
             <input type="text" name="" id="" />
