[Kunal] ADD: Unit convertor with mock implmentation

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <select name="" id="units"></select>
         <div class="inner-boxes">
           <div class="box">
-            <input type="text" name="" id="" />
+            <input type="text" name="" id="input-1" />
             <div class="dropdown">
               <select name="" id="unit-1"></select>
             </div>
           </div>
           <h3>&nbsp;=&nbsp;</h3>
           <div class="box">
-            <input type="text" name="" id="" />
+            <input type="text" name="" id="input-2" />
             <div class="dropdown">
               <select name="" id="unit-2"></select>
             </div>
